FIX: Fix dark mode icon issue

--- a/src/app/experience/Experience.scss
+++ b/src/app/experience/Experience.scss
@@ -1,5 +1,5 @@
 #experience {
-  @apply h-max border-b-2 pt-2 pb-8;
+  @apply h-max border-b-2 pt-2 pb-8 select-none;
 }
 
 .jobs-container {
