--- a/src/app/projects/Projects.scss
+++ b/src/app/projects/Projects.scss
@@ -1,5 +1,5 @@
 .projects-container {
-  @apply min-h-full h-max py-4 px-32 text-center;
+  @apply min-h-full h-max py-4 px-32 text-center select-none;
 }
 
 .projects-header {
