--- a/src/app/skills/Skills.scss
+++ b/src/app/skills/Skills.scss
@@ -1,5 +1,5 @@
 #skills {
-  @apply h-max border-b-2 p-2 pb-6 flex flex-col items-center;
+  @apply h-max border-b-2 p-2 pb-6 flex flex-col items-center select-none;
 }
 
 .skills-header {
